Design: Edit Design
- 날씨 정보 출력 시, 상태에 따른 아이콘 이미지를 추가
(When outputting weather information, a image of an icon
according to the weather condition was added.)
- to-do list에 내용 추가 시에, 해당 출력 부분 높이를 벗어나면
scroll이 될 수 있도록 수정
(When adding content to the to-do list, it was modified so
that it could be scrolled out of the corresponding output
part height.)

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -24,14 +24,17 @@
     <form id="todo-form" class="hidden todo-form">
       <input type="text" placeholder="Write a To Do and Press Enter." />
     </form>
-    <ul id="todo-list"></ul>
+    <nav class="todo-navigation">
+      <span class="todo-list__title">TODAY</span>
+      <ul id="todo-list" class="hidden"></ul>
+    </nav>
     <div id="quote">
       <span></span>
       <span></span>
     </div>
     <div id="weather">
       <span></span>
-      <span></span>
+      <img src="" />
       <span></span>
     </div>
     <script src="js/greetings.js"></script>
