Design: edit Page
- 글씨 색상 변경
(Change font color)
- 배경 이미지 파일 일부 변경
(Change some background image files)
- 화면 크기에 맞게 내부 요소의 크기 및 비율이 달라지도록 적용
(Applies the size and proportion of internal elements
to match the screen size)

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -24,17 +24,16 @@
     <form id="todo-form" class="hidden todo-form">
       <input type="text" placeholder="Write a To Do and Press Enter." />
     </form>
-    <nav class="todo-navigation">
-      <span class="todo-list__title">TODAY</span>
-      <ul id="todo-list" class="hidden"></ul>
+    <nav class="todo-navigation hidden">
+      <span class="todo-navigation__title">TODAY</span>
+      <ul id="todo-list"></ul>
     </nav>
     <div id="quote">
       <span></span>
       <span></span>
     </div>
-    <div id="weather">
+    <div id="weather" class="hidden">
       <span></span>
-      <img src="" />
       <span></span>
     </div>
     <script src="js/greetings.js"></script>
